# py-jail

./: .cirrus.yml  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  LICENSE.txt  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
jail/: __init__.py  __version__.py  libc.py  types.py
tests/: IovecValue_test.py  Jiov_test.py  conftest.py  jail_test.py
