[aliases]
test = pytest

[tool:pytest]
addopts = --verbose

[metadata]
name = jail
version = attr: jail.__version__
description = Native FreeBSD jail bindings with libc.
long_description = file: README.md
long_description_content_type = text/markdown
url =  https://github.com/gronke/py-jail
author = Stefan Grönke
author_email = stefan@gronke.net
python_requires = >=3.6
platforms =
    FreeBSD
license = BSD 2-Clause License
keywords =
    FreeBSD
    jail
classifiers =
    License :: OSI Approved :: BSD 2-Clause License
    Operating System :: POSIX :: BSD :: FreeBSD
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed
tests_require =
    pytest-runner
    pytest

[options]
packages = find:
install_requires =
    freebsd_sysctl >=0.0.7

[options.packages.find]
exclude =
    tests